logs/licenses.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/licenses'...
Compiling './lib/python3.5/site-packages/licenses/__init__.py'...
***   File "./lib/python3.5/site-packages/licenses/__init__.py", line 163
    raise Exception, msg
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/licenses/deploy.py'...
***   File "./lib/python3.5/site-packages/licenses/deploy.py", line 21
    print "Usage: %s" % self.usage
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/licenses/scrape.py'...
***   File "./lib/python3.5/site-packages/licenses/scrape.py", line 30
    print "Scraping: %s" % url
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/licenses/service.py'...
***   File "./lib/python3.5/site-packages/licenses/service.py", line 16
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/licenses-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
